# my_vector

./: main.cpp  test.qbs
12/: house.cpp  koch_snowflake.cpp  regular_polygons.cpp  superellipse.cpp
12/shape_primitives/: CMakeLists.txt  main.cpp  shape_primitives.qbs
completed_tasks/: correct_input_V1.cpp  get_numbers_sum_from_file.cpp
